Change img filename. Minor bug fixes. Center button on mobile.

--- a/src/components/info/link-tree/link-tree.module.scss
+++ b/src/components/info/link-tree/link-tree.module.scss
@@ -1,5 +1,6 @@
 .linkTree {
   width: 100%;
+  padding: 0;
   .link {
     text-decoration: none;
     background-color: var(--color-white);
